# cw-deep

contracts/cw-deeplinks/: Cargo.toml
contracts/cw-deeplinks/src/: contract.rs  execute.rs  msg.rs  query.rs  state.rs  tests.rs
schema/: cw-deeplinks.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_debug_state.json  response_to_deeplink.json
