[package]
name = "cw-deeplinks"
version = "0.0.1"
authors = ["CyborgsHead"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
anyhow = "1"
cw2 = "2.0.0"
cosmwasm-std = { version = "2.1.4"}
cw-utils = { version = "2.0.0" }
cw-storage-plus = { version = "2.0.0" }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
semver = "1"
cosmwasm-schema = { version = "2.1.4" }

[dev-dependencies]
serde_json = "1.0.132"
